# opengl-ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  generate-includable-shaders.sh  readme.md
shaders/: rt.frag  rt.vert
src/: main.cpp
